Swagger works now #3
